# mhpy

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
src/mhpy/: optim.py
src/mhpy/cli/: main.py
src/mhpy/cli/commands/: initialize.py
src/mhpy/cli/config/command/: ci_init.yaml  init.yaml
src/mhpy/cli/templates/: EDA.ipynb.jinja  Makefile.jinja  gitignore.tpl  hydra_config.tpl  pre-commit.tpl  pyproject_append.toml.jinja  pyproject_append.tpl  pytest.ini.jinja  train.py.jinja  train.tpl
src/mhpy/utils/: common.py  format.py  metrics.py  plot.py  pytorch.py  subprocess.py  tracking.py
tests/: test_optim.py
tests/cli/: test_initialize.py  test_initialize_integration.py
tests/utils/: test_common.py  test_format.py  test_metrics.py  test_plot.py  test_pytorch.py  test_subprocess.py  test_tracking.py
