[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mhpy"
version = "0.1.0"
description = "Lib for scaffolding ML projects and common utils."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pudb>=2025.1.5",
    "ruff>=0.14.6",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5.1",
    "wandb>=0.23.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "gitpython>=3.1.45",
]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "jupyter>=1.1.1",
]
all = [
    "mhpy[ml,dev]",
]

[project.scripts]
mhpy = "mhpy.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.jinja"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 150
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]


[tool.ruff.lint.isort]
known-first-party = ["mhpy"]
force-single-line = true
force-sort-within-sections = true
